--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.messji.messji">
 
-    <!--I added this to allow androidStudio to connect to the internet-->
+    <!-- I added this to allow androidStudio to connect to the internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,12 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".MessjiActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MessengerActivity" />
         <activity android:name=".ProfileActivity"></activity>
     </application>
 
