--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.scaledrone:scaledrone-java:0.3.0'
+
+    //For recyclerView
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    //implementation 'com.scaledrone:scaledrone-java:0.3.0'
     // I added this for using the scaledrone module
 
     implementation 'com.google.code.gson:gson:2.8.5'
